fixed search bar on mobile

--- a/style.css
+++ b/style.css
@@ -112,6 +112,7 @@ nav:hover {
     outline: none;
     font-size: 1.5em;
     padding: 5px;
+    width: 100%;
 }
 ::placeholder {
     color: white;
